# ixray-1.6-stcop

./: CMakeLists.txt
gamedata/configs/: engine_external.ltx
gamedata/scripts/: benchmark.script  cam_effector_sets.script  class_registrator.script
gamedata/shaders/r2/: ScreenSpaceContactShadows.hlsli  accum_base.ps  accum_sun_cascade.ps  accum_sun_cascade_far.ps  common.h  deffer_model_bump.vs  deffer_model_flat.vs  ssao.ps  water.ps
gamedata/spawns/: bench_rain.spawn
src/Include/xrAPI/: xrAPI.h
src/Include/xrRender/: RenderFactory.h  UIShader.h
src/Layers/xrRender/: Blender_Recorder_StandartBinding.cpp  D3DUtils.cpp  D3DUtils.h  DetailManager.h  ETextureParams.cpp  ETextureParams.h  FSkinned.cpp  FTreeVisual.cpp  FVisual.cpp  HW.h  ModelPool.cpp  PSLibrary.cpp  ParticleEffect.cpp  ParticleEffectDef.cpp  ParticleEffectDef.h  R_Backend.cpp  R_Backend_Runtime.cpp  R_Backend_xform.cpp  SH_Texture.h  ShaderResourceTraits.h  SkeletonCustom.cpp  SkeletonCustom.h  SkeletonX.cpp  dxDebugRender.cpp  dxFontRender.cpp  dxLensFlareRender.cpp  dxRainRender.cpp  dxRenderDeviceRender.cpp  dxRenderDeviceRender.h  dxRenderFactory.cpp  dxRenderFactory.h  dxStatsRender.cpp  r__dsgraph_build.cpp  r__dsgraph_structure.h  r_constants.cpp  stats_manager.cpp  xrRender_console.cpp  xrRender_console.h
src/Layers/xrRenderDX10/: dx11ResourceManager_Resources.cpp  dx11ResourceManager_Scripting.cpp
src/Layers/xrRenderDX9/: dx9RenderScreenshot.cpp  dx9ResourceManager_Resources.cpp  dx9ResourceManager_Scripting.cpp  dx9SH_Texture.cpp  dx9Texture.cpp  dx9r_constants_cache.cpp
src/Layers/xrRenderPC_R1/: Blender_LaEmB.cpp  CMakeLists.txt  FStaticRender.cpp  FStaticRender.h  FStaticRender_Loader.cpp  LightProjector.cpp  Packages.config  stdafx.h
src/Layers/xrRenderPC_R2/: CMakeLists.txt  Packages.config  r2.cpp  r2.h
src/Layers/xrRenderPC_R4/: CSCompiler.cpp  r4.cpp  r4.h  r4_R_render.cpp  r4_rendertarget.cpp  r4_rendertarget_phase_combine.cpp  r4_rendertarget_phase_scene.cpp
src/editors/ECore/: stdafx.h
src/editors/ParticleEditor/: PSLibraryEditor.cpp  ParticleEditor.cpp  ParticleEffectActionsImpl.cpp  ParticleEffectEditor.cpp  ParticleGroupEditor.cpp  StatGraph.cpp  StatGraph.h  UI_ParticleMain.cpp  UI_ParticleMain.h  UI_ParticleTools.cpp  UI_ParticleTools.h  UI_ParticleToolsProps.cpp  stdafx.cpp  stdafx.h
src/editors/wxWidgetsLevelEditor/: LevelEditor.sln  Resource.rc  main.cpp  resource.h
src/editors/xrECore/: CMakeLists.txt
src/editors/xrEProps/: FolderLib.h  ItemListHelper.cpp  ItemListHelper.h  PropertiesListHelper.cpp  PropertiesListTypes.cpp  stdafx.h
src/editors/xrEUI/: CMakeLists.txt  XrUIManager.cpp  imgui_impl_sdl3.cpp
src/editors_new/ParticleEditor/: CMakeLists.txt  PSLibraryEditor.cpp  ParticleEditor.cpp  UITopBarForm.cpp  UI_ParticleMain.cpp
src/editors_new/Public/: PropertiesListTypes.h
src/editors_new/xrECore/: CMakeLists.txt  stdafx.h
src/editors_new/xrECore/Editor/: D3DUtils.cpp  EThumbnail.cpp  EThumbnail.h  EditObject.h  EditObjectSkin.cpp  EditorPreferences.cpp  ExportSkeleton.cpp  ExportSkeleton.h  ImageManager.cpp  ParticleEffectActions.h  UI_MainCommand.cpp  UI_ToolsCustom.cpp  UI_ToolsCustom.h  device.cpp  device.h  render.h  ui_main.cpp
src/editors_new/xrECore/Engine/: XrGameMaterialLibraryEditors.h
src/editors_new/xrEUI/: CMakeLists.txt  XrUIManager.cpp
src/editors_old/ActorEditor/: ActorEditor.bpr  BonePart.cpp  BottomBar.cpp  ClipEditor.h  stdafx.h
src/editors_old/ECore/: stdafx.h  xrECoreB.bpr
src/editors_old/LevelEditor/: BottomBar.cpp  DOShuffle.h  EditLibrary.cpp  LEClipEditor.h  LevelEditor.bpr  ObjectList.h  ShaderFunction.cpp  stdafx.h
src/editors_old/PPEditor/: Postprocess.bpr
src/editors_old/ParticleEditor/: BottomBar.cpp  ObjectAnimator.h  ParticleEditor.bpr  ParticleEffectActionsImpl.cpp  ParticleEffectEditor.cpp  ParticleEffectParser.cpp  StatGraph.h  UI_ParticleTools.cpp  stdafx.h
src/editors_old/ShaderEditor/: BottomBar.cpp  SHEngineTools.h  ShaderEditor.bpr  UI_shadertools.h  stdafx.h
src/utils/xrForms/: CMakeLists.txt  cl_log.cpp  cl_log.h  packages.config  xrForms.cpp  xrThread.cpp
src/utils/xrLC/: OGF_Face_Sphere.cpp
src/xrCore/: ChooseTypes.H  ELocatorAPI.h  FS.cpp  FileSystem.cpp  FileSystem.h  FileSystem_borland.cpp  LocatorAPI.cpp  LocatorAPI.h  _bitwise.h  _math.cpp  _std_extensions.h  _stl_extensions.h  _types.h  xrCore.h  xrMemory.cpp  xr_ini.h
src/xrEngine/: CMakeLists.txt  Device_create_render.cpp  Device_create_render_dx11.cpp  Device_create_render_dx9.cpp  Device_wndproc.cpp  EngineExternal.h  Environment.cpp  GameFont.cpp  GameMtlLib.h  IGame_Persistent.cpp  IGame_Persistent.h  ObjectAnimator.cpp  Packages.config  Render.h  ai_script_lua_extension.cpp  bone.h  device.cpp  device.h  motion.h  pure.cpp  pure_relcase.h  stdafx.h  x_ray.cpp  xr_ioc_cmd.cpp  xr_level_controller.cpp  xr_level_controller.h
src/xrEngine/dxerr/: dxerr.cpp
src/xrGame/: Actor.cpp  Actor.h  ActorAnimation.cpp  ActorInput.cpp  Actor_Movement.cpp  Artefact.cpp  Bolt.cpp  CMakeLists.txt  CustomDetector.cpp  DestroyablePhysicsObject.cpp  Grenade.cpp  HudItem.cpp  Inventory.cpp  Missile.cpp  PHDestroyable.cpp  Weapon.cpp  Weapon.h  WeaponAutomaticShotgun.cpp  WeaponBinoculars.cpp  WeaponFire.cpp  WeaponKnife.cpp  WeaponMagazined.cpp  WeaponMagazined.h  WeaponMagazinedWGrenade.cpp  WeaponPistol.cpp  WeaponShotgun.cpp  flare.cpp  ini_table_loader.h  player_hud.cpp  sound_player.cpp  sound_player.h
src/xrGame/ui/: UIActorMenu.cpp  UIActorMenu.h  UIActorMenuInitialize.cpp  UIActorMenuInventory.cpp  UICellCustomItems.cpp
src/xrParticles/: psystem.h
src/xrPhysics/: ActorCameraCollision.cpp  ElevatorState.cpp  PHAICharacter.cpp  PHCapture.cpp  PHCaptureInit.cpp  PHJoint.cpp  PHWorld.cpp  PHWorld.h  xrPhysics.h
src/xrPlay/: xrPlay.cpp
src/xrScripts/: script_engine_script.cpp
src/xrServerEntities/: inventory_space.h  object_factory_register.cpp  script_engine_export.h  script_engine_script.cpp  script_storage.cpp
src/xrSound/: Sound.h  SoundRender_Core.cpp  SoundRender_Core.h  stdafx.h
(+114 files in other folders)
